@startuml
allowmixing
package "com.limatisoft" {
	class MainApplication 
	class ApplicationContext
}

package "com.limatisoft.base.ui.console" {
	class MyConsole
	class MainMenuConsole
	class ProductMenuConsole
	class AddProductConsole
	class EditProductConsole
	class DeleteProductConsole
	class ProductReportConsole
}

note left of MyConsole
  MyConsole es usada por:
  - MainMenuConsole
  - ProductMenuConsole
  - AddProductConsole
  - EditProductConsole
  - DeleteProductConsole
  - ProductReportConsole
end note

note as N1MainApplicationApplicationContext
	MainApplication utiliza ApplicationContext para obtener
	la referencia de MainMenuConsole y con ello el resto de referencias.
end note
    
package "com.limatisoft.base.service" {
	class ProductCommandService{
		+ save(Product): void
	    + update(Product): void
	    + delete(Product): void
	    + saveUniqueProduct: void
	    + assertUniqueCode(Product): void
	}
	class ProductQueryService {
    	+ findAll(): List<Product>
    	+ findByCode(String): Product
	}
}

package "com.limatisoft.base.model" {
	class Product {
	    - id: Long 
	    - code: String
	    - name: String
	    - salesPrice: java.math.BigDecimal
	     {method} +getters y setters para todos los atributos
	}
} 

package "com.limatisoft.base.repository" {
	interface ProductRepository{
		+ save(Product): void
		+ update(Product): void
		+ delete(Product): void
	    + findByCode(String): Product
	    + findByCodeAndIdNot(String,Long): Product
	    + findAll(): List<Product>
	}

	package "com.limatisoft.base.repository.file" {
		class ProductFileRepository implements ProductRepository{
			+ save(Product): void
			+ update(Product): void
			+ delete(Product): void
		    + findByCode(String): Product
		    + findByCodeAndIdNot(String,Long): Product
		    + findAll(): List<Product>
		}
	}
	
	package "com.limatisoft.base.repository.jdbc" {
		class ProductJdbcRepository implements ProductRepository{
			+ save(Product): void
			+ update(Product): void
			+ delete(Product): void
		    + findByCode(String): Product
		    + findByCodeAndIdNot(String,Long): Product
		    + findAll(): List<Product>
		}
	}
}

package "com.limatisoft.db" {
	class DatabaseConnectionManager 
}

package "com.limatisoft.config" {
	class FilePaths 
}
 
MainApplication o--> MainMenuConsole
MainMenuConsole o--> ProductMenuConsole
ProductMenuConsole *--> AddProductConsole
ProductMenuConsole *--> EditProductConsole
ProductMenuConsole *--> DeleteProductConsole
ProductMenuConsole *--> ProductReportConsole
AddProductConsole o--> ProductCommandService
EditProductConsole o--> ProductCommandService

DeleteProductConsole o--> ProductCommandService
ProductReportConsole o--> ProductQueryService
ProductCommandService --> ProductRepository
ProductQueryService --> ProductRepository
ProductJdbcRepository --> DatabaseConnectionManager
ProductFileRepository --> FilePaths
N1MainApplicationApplicationContext ..> MainApplication 
N1MainApplicationApplicationContext ..> ApplicationContext
@enduml
